<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Triangle.fragments.EuclideanTheorem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/EuclideanTheorem"
            android:textColor="@color/teal_700"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/fragment_euclidean"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/Information"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linear_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/text_view_number_a"
                    android:layout_width="95dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/linear_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/p"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/text_view_number_p"
                    android:layout_width="95dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/linear_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/k"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/text_view_number_k"
                    android:layout_width="95dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

        </LinearLayout>


        <Button

            android:id="@+id/calculate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_desing"
            android:text="@string/Button_Text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/result_text_desing"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>


    </LinearLayout>

</FrameLayout>